native/ailia.h

/****************************************************************
 * ライブラリ状態定義
 **/

/**
 * \~japanese
 * @def AILIA_STATUS_SUCCESS
 * @brief 成功
 *
 * \~english
 * @def AILIA_STATUS_SUCCESS
 * @brief Successful
 */
#define AILIA_STATUS_SUCCESS (0)
/**
 * \~japanese
 * @def AILIA_STATUS_UNSETTLED_SHAPE
 * @brief 形状が未確定
 * @remark
 * 出力形状などが不定形です。出力形状取得時に発生した場合は入力形状を指定した上で推論を行い、その後形状取得APIを呼び出してください。
 *
 * \~english
 * @def AILIA_STATUS_UNSETTLED_SHAPE
 * @brief The shape is not yet determined
 * @remark The shape (e.g. output shape) are not determined. When called API that to get output shape, please set input
 * shape and execute inference, then call API that to get output shape.
 */
#define AILIA_STATUS_UNSETTLED_SHAPE (-18)
/**
 * \~japanese
 * @def AILIA_STATUS_NDIMENSION_SHAPE
 * @brief 形状が5次元以上であることを示す
 * @remark
 * 4次元までしか扱えない旧APIが呼び出されました。APIドキュメントを参照し、5次元以上が扱えるAPIを利用してください。
 *
 * \~english
 * @def AILIA_STATUS_NDIMENSION_SHAPE
 * @brief Dimension of shape is 5 or more.
 * @remark The called API are supported up to 4 dimension. Please replace API that described on API document.
 */
#define AILIA_STATUS_NDIMENSION_SHAPE (-23)

/****************************************************************
 * ネットワークオブジェクトのインスタンス
 **/

struct AILIANetwork;


/****************************************************************
 * 形状情報
 **/

#define AILIA_SHAPE_VERSION (1)

typedef struct _AILIAShape {
	/**
	 * \~japanese
	 * X軸のサイズ
	 *
	 * \~english
	 * Size along the X axis
	 */
	unsigned int x;
	/**
	 * \~japanese
	 * Y軸のサイズ
	 *
	 * \~english
	 * Size along the Y axis
	 */
	unsigned int y;
	/**
	 * \~japanese
	 * Z軸のサイズ
	 *
	 * \~english
	 * Size along the Z axis
	 */
	unsigned int z;
	/**
	 * \~japanese
	 * W軸のサイズ
	 *
	 * \~english
	 * Size along the W axis
	 */
	unsigned int w;
	/**
	 * \~japanese
	 * 次元情報
	 *
	 * \~english
	 * Dimension information
	 */
	unsigned int dim;
} AILIAShape;


/**
 * \~japanese
 * @brief ネットワークオブジェクトを破棄します。
 * @param net ネットワークオブジェクトポインタ
 *
 * \~english
 * @brief It destroys the network instance.
 * @param net A network instance pointer
 */
void AILIA_API ailiaDestroy(struct AILIANetwork* net);


/**
 * \~japanese
 * @brief 推論時の入力データの形状を変更します。
 * @param net ネットワークオブジェクトポインタ
 * @param shape 入力データの形状情報
 * @param version AILIA_SHAPE_VERSION
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *   prototxtで定義されている入力形状を変更します。
 *   prototxtに記述されているランクと同じにする必要があります。
 *   なお、重み係数の形状が入力形状に依存しているなどによりエラーが返る場合があります。
 *   prototxtで定義されているランクが4次元未満の場合は未使用の要素に1を設定する必要があります。
 *   prototxtで定義されているランクが5次元以上の場合は ailiaSetInputShapeND() を利用してください。
 *   このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
 *
 * \~english
 * @brief Changes the shape of the input data during inference.
 * @param net A network instance pointer
 * @param shape Shape information for the input data
 * @param version AILIA_SHAPE_VERSION
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This function changes the input shape defined in prototxt.
 *   The shape must have the same rank as the one contained in prototxt.
 *   Note that an error may be returned if the weights are dependent on the input shapes, among other reasons.
 *   The dimension of shape that defined in prototxt is less than 4, the unused element must be set to 1.
 *   The dimension of shape that defined in prototxt has 5 or more, please use  ailiaSetInputShapeND().
 *   This API can be call after call ailiaOpenWeighXXX()
 */
int AILIA_API ailiaSetInputShape(struct AILIANetwork* net, const AILIAShape* shape, unsigned int version);


/**
 * \~japanese
 * @brief 推論時の入力データの形状を変更します。
 * @param net ネットワークオブジェクトポインタ
 * @param shape 入力データの各次元の大きさの配列(dim-1, dim-2, ... ,1, 0)
 * @param dim shapeの次元
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *   prototxtで定義されている入力形状を変更します。
 *   prototxtに記述されているランクと同じにする必要があります。
 *   なお、重み係数の形状が入力形状に依存しているなどによりエラーが返る場合があります。
 *   このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
 *
 * \~english
 * @brief Changes the shape of the input data during inference.
 * @param net A network instance pointer
 * @param shape An array of shape that contains size of each axis (dim-1, dim-2, ... ,1, 0)
 * @param dim The size of shape.
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This function changes the input shape defined in prototxt.
 *   The shape must have the same rank as the one contained in prototxt.
 *   Note that an error may be returned if the weights are dependent on the input shapes, among other reasons.
 *   This API can be call after call ailiaOpenWeighXXX().
 */
int AILIA_API ailiaSetInputShapeND(struct AILIANetwork* net, const unsigned int* shape, unsigned int dim);


/**
 * \~japanese
 * @brief 推論時の入力データの形状を取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param shape 入力データの形状情報
 * @param version AILIA_SHAPE_VERSION
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、5次元以上の場合 \ref AILIA_STATUS_NDIMENSION_SHAPE 、
 *   形状の一部が未確定の場合 \ref AILIA_STATUS_UNSETTLED_SHAPE 、それ以外のエラーの場合はエラーコードを返す。
 * @details
 *   形状が5次元以上の場合は ailiaGetInputDim() 、 ailiaGetInputShapeND() を利用してください。
 *   形状の一部が未確定の場合、該当する次元の値は0となり、それ以外の次元の値は有効な値が格納されます。
 *   このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
 *
 * \~english
 * @brief Gets the shape of the input data during inference.
 * @param net A network instance pointer
 * @param shape Shape information for the input data
 * @param version AILIA_SHAPE_VERSION
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS .
 *   If shape has 5 or more dimension, it returns  \ref AILIA_STATUS_NDIMENSION_SHAPE .
 *   And if shape is not seattled, it returns \ref AILIA_STATUS_UNSETTLED_SHAPE , or an error code otherwise.
 * @details
 *   When dimension of shape is 5 or more, please use  ailiaGetInputDim() and  ailiaGetInputShapeND().
 *   When shape is not settled, this function stores 0 at unsettled dimension and otherwise stores valid value.
 *   This API can be call after call ailiaOpenWeighXXX().
 */
int AILIA_API ailiaGetInputShape(struct AILIANetwork* net, AILIAShape* shape, unsigned int version);


/**
 * \~japanese
 * @brief 推論時の入力データの次元を取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param dim 入力データの次元の格納先
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、それ以外のエラーの場合はエラーコードを返す。
 * @details
 *   このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
 *
 * \~english
 * @brief Gets the dimension of the input data during inference.
 * @param net A network instance pointer
 * @param dim The storage location of the dimension
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This API can be call after call ailiaOpenWeighXXX().
 */
int AILIA_API ailiaGetInputDim(struct AILIANetwork* net, unsigned int* dim);


/**
 * \~japanese
 * @brief 推論時の入力データの形状を取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param shape 入力データの各次元の大きさの格納先配列(dim-1, dim-2, ... ,1, 0順で格納)
 * @param dim shapeの次元
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、形状の一部が未確定の場合 \ref AILIA_STATUS_UNSETTLED_SHAPE 、
 *   それ以外のエラーの場合はエラーコードを返す。
 * @details
 *   形状の一部が未確定の場合、該当する次元の値は0となり、それ以外の次元の値は有効な値が格納されます。
 *   このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
 *
 * \~english
 * @brief Gets the shape of the input data during inference.
 * @param net A network instance pointer
 * @param shape The storage location of the shape array. (It stores dim-1, dim-2, ... ,1, 0 order.)
 * @param dim The size of shape
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS .
 *   And if shape is not seattled, it returns  \ref AILIA_STATUS_UNSETTLED_SHAPE , or an error code otherwise.
 * @details
 *   When shape is not settled, this function stores 0 at unsettled dimension and otherwise stores valid value.
 *   This API can be call after call ailiaOpenWeighXXX().
 */
int AILIA_API ailiaGetInputShapeND(struct AILIANetwork* net, unsigned int* shape, unsigned int dim);


/**
 * \~japanese
 * @brief 推論時の出力データの形状を取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param shape 出力データの形状情報
 * @param version AILIA_SHAPE_VERSION
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、5次元以上の場合 \ref AILIA_STATUS_NDIMENSION_SHAPE 、
 *   それ以外のエラーの場合エラーコードを返す。
 *   形状が5次元以上の場合は ailiaGetOutputDim() 、 ailiaGetOutputShapeND() を利用してください。
 *   このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
 *
 * \~english
 * @brief Gets the shape of the output data during inference.
 * @param net A network instance pointer
 * @param shape Shape information of the output data
 * @param version AILIA_SHAPE_VERSION
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS .
 *   And if shape has 5 or more dimension, it returns  \ref AILIA_STATUS_NDIMENSION_SHAPE , or an error code otherwise.
 * @details
 *   When dimension of shape is 5 or more, please use  ailiaGetOutputDim() () and  ailiaGetOutputShapeND().
 *   This API can be call after call ailiaOpenWeighXXX().
 */
int AILIA_API ailiaGetOutputShape(struct AILIANetwork* net, AILIAShape* shape, unsigned int version);


/**
 * \~japanese
 * @brief 推論時の出力データの次元を取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param dim 出力データの次元の格納先
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、それ以外のエラーの場合はエラーコードを返す。
 * @details
 *   このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
 *
 * \~english
 * @brief Gets the dimension of the output data during inference.
 * @param net A network instance pointer
 * @param dim The storage location of the dimension
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This API can be call after call ailiaOpenWeighXXX().
 */
int AILIA_API ailiaGetOutputDim(struct AILIANetwork* net, unsigned int* dim);


/**
 * \~japanese
 * @brief 推論時の出力データの形状を取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param shape 出力データの各次元の大きさの格納先配列(dim-1, dim-2, ... ,1, 0順で格納)
 * @param dim shapeの次元
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、それ以外のエラーの場合はエラーコードを返す。
 * @details
 *   このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
 *
 * \~english
 * @brief Gets the shape of the output data during inference.
 * @param net A network instance pointer
 * @param shape The storage location of the shape array. (It stores dim-1, dim-2, ... ,1, 0 order.)
 * @param dim The size of shape
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This API can be call after call ailiaOpenWeighXXX().
 */
int AILIA_API ailiaGetOutputShapeND(struct AILIANetwork* net, unsigned int* shape, unsigned int dim);