lib/ffi/ailia.dart


  /// \~japanese
  /// @brief ネットワークオブジェクトを破棄します。
  /// @param net ネットワークオブジェクトポインタ
  ///
  /// \~english
  /// @brief It destroys the network instance.
  /// @param net A network instance pointer
  void ailiaDestroy(
    ffi.Pointer<AILIANetwork> net,
  ) {
    return _ailiaDestroy(
      net,
    );
  }

  late final _ailiaDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<AILIANetwork>)>>(
          'ailiaDestroy');
  late final _ailiaDestroy =
      _ailiaDestroyPtr.asFunction<void Function(ffi.Pointer<AILIANetwork>)>();

  /// \~japanese
  /// @brief 推論時の入力データの形状を変更します。
  /// @param net ネットワークオブジェクトポインタ
  /// @param shape 入力データの形状情報
  /// @param version AILIA_SHAPE_VERSION
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// prototxtで定義されている入力形状を変更します。
  /// prototxtに記述されているランクと同じにする必要があります。
  /// なお、重み係数の形状が入力形状に依存しているなどによりエラーが返る場合があります。
  /// prototxtで定義されているランクが4次元未満の場合は未使用の要素に1を設定する必要があります。
  /// prototxtで定義されているランクが5次元以上の場合は ailiaSetInputShapeND() を利用してください。
  /// このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
  ///
  /// \~english
  /// @brief Changes the shape of the input data during inference.
  /// @param net A network instance pointer
  /// @param shape Shape information for the input data
  /// @param version AILIA_SHAPE_VERSION
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This function changes the input shape defined in prototxt.
  /// The shape must have the same rank as the one contained in prototxt.
  /// Note that an error may be returned if the weights are dependent on the input shapes, among other reasons.
  /// The dimension of shape that defined in prototxt is less than 4, the unused element must be set to 1.
  /// The dimension of shape that defined in prototxt has 5 or more, please use  ailiaSetInputShapeND().
  /// This API can be call after call ailiaOpenWeighXXX()
  int ailiaSetInputShape(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<AILIAShape> shape,
    int version,
  ) {
    return _ailiaSetInputShape(
      net,
      shape,
      version,
    );
  }

  late final _ailiaSetInputShapePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<AILIAShape>,
              ffi.Uint32)>>('ailiaSetInputShape');
  late final _ailiaSetInputShape = _ailiaSetInputShapePtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<AILIAShape>, int)>();

  /// \~japanese
  /// @brief 推論時の入力データの形状を変更します。
  /// @param net ネットワークオブジェクトポインタ
  /// @param shape 入力データの各次元の大きさの配列(dim-1, dim-2, ... ,1, 0)
  /// @param dim shapeの次元
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// prototxtで定義されている入力形状を変更します。
  /// prototxtに記述されているランクと同じにする必要があります。
  /// なお、重み係数の形状が入力形状に依存しているなどによりエラーが返る場合があります。
  /// このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
  ///
  /// \~english
  /// @brief Changes the shape of the input data during inference.
  /// @param net A network instance pointer
  /// @param shape An array of shape that contains size of each axis (dim-1, dim-2, ... ,1, 0)
  /// @param dim The size of shape.
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This function changes the input shape defined in prototxt.
  /// The shape must have the same rank as the one contained in prototxt.
  /// Note that an error may be returned if the weights are dependent on the input shapes, among other reasons.
  /// This API can be call after call ailiaOpenWeighXXX().
  int ailiaSetInputShapeND(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Uint32> shape,
    int dim,
  ) {
    return _ailiaSetInputShapeND(
      net,
      shape,
      dim,
    );
  }

  late final _ailiaSetInputShapeNDPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>,
              ffi.Uint32)>>('ailiaSetInputShapeND');
  late final _ailiaSetInputShapeND = _ailiaSetInputShapeNDPtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>, int)>();

  /// \~japanese
  /// @brief 推論時の入力データの形状を取得します。
  /// @param net ネットワークオブジェクトポインタ
  /// @param shape 入力データの形状情報
  /// @param version AILIA_SHAPE_VERSION
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、5次元以上の場合 \ref AILIA_STATUS_NDIMENSION_SHAPE 、
  /// 形状の一部が未確定の場合 \ref AILIA_STATUS_UNSETTLED_SHAPE 、それ以外のエラーの場合はエラーコードを返す。
  /// @details
  /// 形状が5次元以上の場合は ailiaGetInputDim() 、 ailiaGetInputShapeND() を利用してください。
  /// 形状の一部が未確定の場合、該当する次元の値は0となり、それ以外の次元の値は有効な値が格納されます。
  /// このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
  ///
  /// \~english
  /// @brief Gets the shape of the input data during inference.
  /// @param net A network instance pointer
  /// @param shape Shape information for the input data
  /// @param version AILIA_SHAPE_VERSION
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS .
  /// If shape has 5 or more dimension, it returns  \ref AILIA_STATUS_NDIMENSION_SHAPE .
  /// And if shape is not seattled, it returns \ref AILIA_STATUS_UNSETTLED_SHAPE , or an error code otherwise.
  /// @details
  /// When dimension of shape is 5 or more, please use  ailiaGetInputDim() and  ailiaGetInputShapeND().
  /// When shape is not settled, this function stores 0 at unsettled dimension and otherwise stores valid value.
  /// This API can be call after call ailiaOpenWeighXXX().
  int ailiaGetInputShape(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<AILIAShape> shape,
    int version,
  ) {
    return _ailiaGetInputShape(
      net,
      shape,
      version,
    );
  }

  late final _ailiaGetInputShapePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<AILIAShape>,
              ffi.Uint32)>>('ailiaGetInputShape');
  late final _ailiaGetInputShape = _ailiaGetInputShapePtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<AILIAShape>, int)>();

  /// \~japanese
  /// @brief 推論時の入力データの次元を取得します。
  /// @param net ネットワークオブジェクトポインタ
  /// @param dim 入力データの次元の格納先
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、それ以外のエラーの場合はエラーコードを返す。
  /// @details
  /// このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
  ///
  /// \~english
  /// @brief Gets the dimension of the input data during inference.
  /// @param net A network instance pointer
  /// @param dim The storage location of the dimension
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This API can be call after call ailiaOpenWeighXXX().
  int ailiaGetInputDim(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Uint32> dim,
  ) {
    return _ailiaGetInputDim(
      net,
      dim,
    );
  }

  late final _ailiaGetInputDimPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>,
              ffi.Pointer<ffi.Uint32>)>>('ailiaGetInputDim');
  late final _ailiaGetInputDim = _ailiaGetInputDimPtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>)>();

  /// \~japanese
  /// @brief 推論時の入力データの形状を取得します。
  /// @param net ネットワークオブジェクトポインタ
  /// @param shape 入力データの各次元の大きさの格納先配列(dim-1, dim-2, ... ,1, 0順で格納)
  /// @param dim shapeの次元
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、形状の一部が未確定の場合 \ref AILIA_STATUS_UNSETTLED_SHAPE 、
  /// それ以外のエラーの場合はエラーコードを返す。
  /// @details
  /// 形状の一部が未確定の場合、該当する次元の値は0となり、それ以外の次元の値は有効な値が格納されます。
  /// このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
  ///
  /// \~english
  /// @brief Gets the shape of the input data during inference.
  /// @param net A network instance pointer
  /// @param shape The storage location of the shape array. (It stores dim-1, dim-2, ... ,1, 0 order.)
  /// @param dim The size of shape
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS .
  /// And if shape is not seattled, it returns  \ref AILIA_STATUS_UNSETTLED_SHAPE , or an error code otherwise.
  /// @details
  /// When shape is not settled, this function stores 0 at unsettled dimension and otherwise stores valid value.
  /// This API can be call after call ailiaOpenWeighXXX().
  int ailiaGetInputShapeND(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Uint32> shape,
    int dim,
  ) {
    return _ailiaGetInputShapeND(
      net,
      shape,
      dim,
    );
  }

  late final _ailiaGetInputShapeNDPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>,
              ffi.Uint32)>>('ailiaGetInputShapeND');
  late final _ailiaGetInputShapeND = _ailiaGetInputShapeNDPtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>, int)>();

  /// \~japanese
  /// @brief 推論時の出力データの形状を取得します。
  /// @param net ネットワークオブジェクトポインタ
  /// @param shape 出力データの形状情報
  /// @param version AILIA_SHAPE_VERSION
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、5次元以上の場合 \ref AILIA_STATUS_NDIMENSION_SHAPE 、
  /// それ以外のエラーの場合エラーコードを返す。
  /// 形状が5次元以上の場合は ailiaGetOutputDim() 、 ailiaGetOutputShapeND() を利用してください。
  /// このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
  ///
  /// \~english
  /// @brief Gets the shape of the output data during inference.
  /// @param net A network instance pointer
  /// @param shape Shape information of the output data
  /// @param version AILIA_SHAPE_VERSION
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS .
  /// And if shape has 5 or more dimension, it returns  \ref AILIA_STATUS_NDIMENSION_SHAPE , or an error code otherwise.
  /// @details
  /// When dimension of shape is 5 or more, please use  ailiaGetOutputDim() () and  ailiaGetOutputShapeND().
  /// This API can be call after call ailiaOpenWeighXXX().
  int ailiaGetOutputShape(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<AILIAShape> shape,
    int version,
  ) {
    return _ailiaGetOutputShape(
      net,
      shape,
      version,
    );
  }

  late final _ailiaGetOutputShapePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<AILIAShape>,
              ffi.Uint32)>>('ailiaGetOutputShape');
  late final _ailiaGetOutputShape = _ailiaGetOutputShapePtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<AILIAShape>, int)>();

  /// \~japanese
  /// @brief 推論時の出力データの次元を取得します。
  /// @param net ネットワークオブジェクトポインタ
  /// @param dim 出力データの次元の格納先
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、それ以外のエラーの場合はエラーコードを返す。
  /// @details
  /// このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
  ///
  /// \~english
  /// @brief Gets the dimension of the output data during inference.
  /// @param net A network instance pointer
  /// @param dim The storage location of the dimension
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This API can be call after call ailiaOpenWeighXXX().
  int ailiaGetOutputDim(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Uint32> dim,
  ) {
    return _ailiaGetOutputDim(
      net,
      dim,
    );
  }

  late final _ailiaGetOutputDimPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>,
              ffi.Pointer<ffi.Uint32>)>>('ailiaGetOutputDim');
  late final _ailiaGetOutputDim = _ailiaGetOutputDimPtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>)>();
